# sync_kindle_and_mac

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md  go.mod  main.go  sync-kindle-and-mac.go  sync-kindle-and-workstation.go
src/: main.rs
