[package]
name = "sync-kobo-and-workstation"
authors = ["Louis Jackman"]
version = "0.1.0"
description = "Synchronise books between a workstation and a Kobo e-book reader."
repository = "https://gitlab.com/louis.jackman/sync-kobo-and-workstation"
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-stream = "0.3.3"
async-walkdir = "0.2.0"
clap = { version = "4.0.29", features = ["derive"] }
directories = "4.0.1"
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = "0.1.11"
whoami = "1.2.3"
